cleaned up code

--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -2,7 +2,7 @@
   <div class="container">
     <br>
     <h1 class="display-4 text-center">What category is your gift?</h1>
-<br>
+    <br>
   </div>
 </div>
 
@@ -12,42 +12,39 @@
 
   <div class="row">
     <div class="col col-md-6 col-md-offset-3">
-
-
-      <button id="Clothing" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Clothes</a></button>
-      <button id="Personal Care" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Personal Care</a></button>
-      <button id="Sports & Outdoors" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Sports & Outdoors</a></button>
+      <button id="Clothing" type="submit" class="btn btn-danger btn-block cat"> <a class="link"
+          href="#">Clothes</a></button>
+      <button id="Personal Care" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Personal
+          Care</a></button>
+      <button id="Sports & Outdoors" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Sports
+          & Outdoors</a></button>
       <button id="Toys" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Toys</a></button>
-
-  
-
     </div>
-
-
 
     <div class="col col-md-6 col-md-offset-3">
 
-
-      <button id="Health" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Health</a></button>
+      <button id="Health" type="submit" class="btn btn-danger btn-block cat"> <a class="link"
+          href="#">Health</a></button>
       <button id="Pets" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Pet</a></button>
       <button id="Food" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Food</a></button>
-      <button id="Pick For Me" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Pick For Me</a></button>
-
-
-
+      <button id="Pick For Me" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Pick For
+          Me</a></button>
     </div>
   </div>
 
-<br>
-<div id="redirectBtn" class= "container">
-  <div class="row justify-content-center">
-  <div class="col-3">
-    <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to Main Menu</a></button>
-     <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
-     <button style="margin-top: 10px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>     
+  <br>
+  <div id="redirectBtn" class="container">
+    <div class="row justify-content-center">
+      <div class="col-3">
+        <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
+            Main Menu</a></button>
+        <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;"
+            href="/login">Select a Person</a></button>
+        <button style="margin-top: 10px;" class="btn btn-success btn-block"><a style="color: white;"
+            href="/price">Select a Price</a></button>
+      </div>
+    </div>
   </div>
-  </div> 
-</div>
 </section> <!-- END OF CONTAINER -->
 
 
