--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,46 +3,45 @@
     <br>
     <h1 class="display-4 text-center">Who is your gift for?</h1>
     <br>
-
   </div>
 </div>
 
 <section class="container">
   <div id="categoryBtns" class="row">
     <div class="col col-md-6 col-md-offset-3">
-      <button id="Grandpa" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Grandpa</a></button>
+      <button id="Grandpa" type="submit" class="btn btn-primary btn-block"> <a class="link"
+          href="#">Grandpa</a></button>
       <button id="Father" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Father</a></button>
-      <button id="Husband" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Husband</a></button>
+      <button id="Husband" type="submit" class="btn btn-primary btn-block"> <a class="link"
+          href="#">Husband</a></button>
       <button id="Son" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Son</a></button>
-      <button id="Brother" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Brother</a></button>
-
+      <button id="Brother" type="submit" class="btn btn-primary btn-block"> <a class="link"
+          href="#">Brother</a></button>
     </div>
 
     <div class="col col-sm-6 col-md-offset-3">
 
-      <button id="Grandma" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Grandma</a></button>
+      <button id="Grandma" type="submit" class="btn btn-primary btn-block"> <a class="link"
+          href="#">Grandma</a></button>
       <button id="Mother" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Mother</a></button>
-      <button id="Daughter" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Daughter</a></button>
+      <button id="Daughter" type="submit" class="btn btn-primary btn-block"> <a class="link"
+          href="#">Daughter</a></button>
       <button id="Wife" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Wife</a></button>
       <button id="Sister" type="submit" class="btn btn-primary btn-block"> <a class="link" href="#">Sister</a></button>
     </div>
     <br>
   </div>
   <div id="redirectBtn" class="container">
-  <div class="row justify-content-center">
-    <div class="col-3">
-      <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
-          Main Menu</a></button>
-          <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;" href="/category">Select a Category</a></button>
-          <button style="margin-top: 10px;" class="btn btn-success btn-block"><a style="color: white;" href="/price">Select a Price</a></button>
-
-
-
-
-
-
+    <div class="row justify-content-center">
+      <div class="col-3">
+        <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
+            Main Menu</a></button>
+        <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;"
+            href="/category">Select a Category</a></button>
+        <button style="margin-top: 10px;" class="btn btn-success btn-block"><a style="color: white;"
+            href="/price">Select a Price</a></button>
+      </div>
     </div>
-  </div>
   </div>
 </section>
 
