--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,4 +1,3 @@
-
 <div class="jumbotron jumbotron-fluid bg-warning">
   <div class="container">
     <br>
@@ -9,28 +8,25 @@
 </div>
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-md-6 col-md-offset-3">     
-  
-  <ul id="options" class="list-group list-group-flush">
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-primary btn-block"><a class="link" href="/login">Who's your gift for?</a> </button></li>
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a class="link" href="/category">What category is your gift?</a></button> </li>
-    <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a class="link" href="/price">What price range is your gift?</a> </button></li>
-  </ul>
+    <div class="col-md-6 col-md-offset-3">
+
+      <ul id="options" class="list-group list-group-flush">
+        <hr>
+        <li class="list-group-item"><button id="btn" type="submit" class="btn btn-primary btn-block"><a class="link"
+              href="/login">Who's your gift for?</a> </button></li>
+        <li class="list-group-item"><button id="btn" type="submit" class="btn btn-danger btn-block"> <a class="link"
+              href="/category">What category is your gift?</a></button> </li>
+        <li class="list-group-item"><button id="btn" type="submit" class="btn btn-success btn-block"> <a class="link"
+              href="/price">What price range is your gift?</a> </button></li>
+      </ul>
 
 
-
-       {{!-- <img id="img1" src="https://lh3.googleusercontent.com/ZIP_I1fs9_rLH8_5BdkgZ4JeCLrpBfO_O-zfq-Id7LDLzs7eQz2gVi4RayuYd6uYRCiDXu5vIHnwL_8Jc1ij5buHkmfvhBv-5-o0BkoBFCnriFlB7tFg=w1280" alt="Gift-box"> --}}
-
-<img id="img1" src="./images/oh-my-gift-box.png" alt="Gift-box">
+      <img id="img1" src="./images/oh-my-gift-box.png" alt="Gift-box">
 
 
 
     </div>
   </div>
 </div>
- <script type="text/javascript" src="js/signup.js"></script>
- <script src="js/omg.js"></script>
-    
-    
-    
-    
+<script type="text/javascript" src="js/signup.js"></script>
+<script src="js/omg.js"></script>
