--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,3 @@
-/* #contain{
-  margin-top: 25px;
-} */
-
 .jumbotron {
   padding: 0.5em 0.6em;
 }
@@ -11,8 +7,8 @@ h1{
   text-align: center;
   font-family: 'Pacifico', cursive;
   text-shadow: rgb(0, 0, 0);
-  
 }
+
 p{
   font-family: 'Josefin Sans', sans-serif;
   font-size: 25px; 
@@ -54,6 +50,8 @@ img{
   margin: auto;
   display: block 
 }
+
+/* keyframe -> animations */
 
 @keyframes omgBox {
   0% {
