--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -27,8 +27,7 @@
           href="#">Health</a></button>
       <button id="Pets" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Pet</a></button>
       <button id="Food" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Food</a></button>
-      <button id="Pick For Me" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">Pick For
-          Me</a></button>
+      <button id="Pick For Me" type="submit" class="btn btn-danger btn-block cat"> <a class="link" href="#">SURPRISE ME</a></button>
     </div>
   </div>
 
