--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -35,7 +35,7 @@
   <div id="redirectBtn" class="container">
     <div class="row justify-content-center">
       <div class="col-3">
-        <button style="margin-top: 30px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
+        <button style="margin-top: 30px;" class="btn btn-warning btn-block clear"><a style="color: white;" href="/">Return to
             Main Menu</a></button>
         <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;"
             href="/login">Select a Person</a></button>
