--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -34,7 +34,7 @@
   <div id="redirectBtn" class="container">
     <div class="row justify-content-center">
       <div class="col-3">
-        <button style="margin-top: 50px;" class="btn btn-warning btn-block"><a style="color: white;" href="/">Return to
+        <button style="margin-top: 50px;" class="btn btn-warning btn-block clear"><a style="color: white;" href="/">Return to
             Main Menu</a></button>
         <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;"
             href="/category">Select a Category</a></button>
