--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -27,6 +27,7 @@
           Main Menu</a></button>
            <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
           <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;" href="/category">Select a Category</a></button>
+          <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;" href="/output">See your selections</a></button>
     </div>
   </div>
 
