Took out src for js files that were deleted

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -45,4 +45,4 @@
   </div>
 </section>
 
-<script type="text/javascript" src="js/login.js"></script>
+<script type="text/javascript" src="js/category.js"></script>
