--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -28,5 +28,4 @@
     </div>
   </div>
 </div>
-<script type="text/javascript" src="js/signup.js"></script>
-<script src="js/omg.js"></script>
+<script type="text/javascript" src="js/category.js"></script>
