created the section where data will reflect

--- a/views/output.handlebars
+++ b/views/output.handlebars
@@ -8,7 +8,19 @@
 </div>
 <div class="container">
 {{!-- Item output goes here --}}
-
+ <div class="card" style="width: 18rem;">
+  <div class="card-header">
+    Your Gift for ${whoever they selected}
+  </div>
+  <ul class="list-group list-group-flush">
+    <li id=".productUrl" class="list-group-item">Product Url</li>
+    <li id=".productName" class="list-group-item">Product Name</li>
+    <li id=".productDescript" class="list-group-item">Product Description</li>
+    <li id=".productPrice" class="list-group-item">Product Price</li>
+  </ul>
+</div>
+<button style="margin-top: 30px;" class="btn btn-warning btn-block clear"><a style="color: white;" href="/">Return to
+            Main Menu</a></button>
 </div>
  <script src="js/category.js"></script>
     
