creating cards for data return

--- a/views/output.handlebars
+++ b/views/output.handlebars
@@ -8,17 +8,58 @@
 </div>
 <div class="container">
 {{!-- Item output goes here --}}
- <div class="card" style="width: 18rem;">
-  <div class="card-header">
+ <div class="card">
+  <div class="card-header text-center">
     Your Gift for ${whoever they selected}
   </div>
-  <ul class="list-group list-group-flush">
-    <li id=".productUrl" class="list-group-item">Product Url</li>
-    <li id=".productName" class="list-group-item">Product Name</li>
-    <li id=".productDescript" class="list-group-item">Product Description</li>
-    <li id=".productPrice" class="list-group-item">Product Price</li>
-  </ul>
+  
+
+<div class="row">
+  <div class="card">
+  <div class="col">
+    <div id="omgUrl" class="row"> Product Url</div>
+    <div id="omgName" class="row"> Product Name</div>
+    <div id="omgDescript" class="row"> Product Description</div>
+    <div id="omgPrice" class="row"> Product Price</div>
+  </div>
+  </div>
+  <div class="card">
+  <div class="col">
+    <div id="omgUrl" class="row"> Product Url</div>
+    <div id="omgName" class="row"> Product Name</div>
+    <div id="omgDescript" class="row"> Product Description</div>
+    <div id="omgPrice" class="row"> Product Price</div>
+  </div>
+  </div>
+  <div class="card">
+  <div class="col">
+    <div id="omgUrl" class="row"> Product Url</div>
+    <div id="omgName" class="row"> Product Name</div>
+    <div id="omgDescript" class="row"> Product Description</div>
+    <div id="omgPrice" class="row"> Product Price</div>
+  </div>
+  </div>
+  <div class="card">
+  <div class="col">
+    <div id="omgUrl" class="row"> Product Url</div>
+    <div id="omgName" class="row"> Product Name</div>
+    <div id="omgDescript" class="row"> Product Description</div>
+    <div id="omgPrice" class="row"> Product Price</div>
+  </div>
+  </div>
+  <div class="card">
+  <div class="col">
+    <div id="omgUrl" class="row"> Product Url</div>
+    <div id="omgName" class="row"> Product Name</div>
+    <div id="omgDescript" class="row"> Product Description</div>
+    <div id="omgPrice" class="row"> Product Price</div>
+  </div>
+  </div>
+  
 </div>
+</div> 
+
+
 <button style="margin-top: 30px;" class="btn btn-warning btn-block clear"><a style="color: white;" href="/">Return to
             Main Menu</a></button>
 </div>
