--- a/views/output.handlebars
+++ b/views/output.handlebars
@@ -15,42 +15,42 @@
   
   <div class="card text">
   <div class="col">
-    <div id="omgUrl" class="row"> Product Url</div>
-    <div id="omgName" class="row"> Product Name</div>
-    <div id="omgDescript" class="row"> Product Description</div>
-    <div id="omgPrice" class="row"> Product Price</div>
+    <div id="omgUrl" class="row"> <p> Product Url </p></div>
+    <div id="omgName" class="row"> <p> Product Name </p></div>
+    <div id="omgDescript" class="row"> <p> Product Description </p></div>
+    <div id="omgPrice" class="row"> <p> Product Price </p></div>
   </div>
   </div>
   <div class="card">
   <div class="col">
-    <div id="omgUrl" class="row"> Product Url</div>
-    <div id="omgName" class="row"> Product Name</div>
-    <div id="omgDescript" class="row"> Product Description</div>
-    <div id="omgPrice" class="row"> Product Price</div>
+    <div id="omgUrl" class="row"> <p> Product Url </p></div>
+    <div id="omgName" class="row"> <p> Product Name </p></div>
+    <div id="omgDescript" class="row"> <p> Product Description </p></div>
+    <div id="omgPrice" class="row"> <p> Product Price </p></div>
   </div>
   </div>
   <div class="card">
   <div class="col">
-    <div id="omgUrl" class="row"> Product Url</div>
-    <div id="omgName" class="row"> Product Name</div>
-    <div id="omgDescript" class="row"> Product Description</div>
-    <div id="omgPrice" class="row"> Product Price</div>
+    <div id="omgUrl" class="row"> <p> Product Url </p></div>
+    <div id="omgName" class="row"> <p> Product Name </p></div>
+    <div id="omgDescript" class="row"> <p> Product Description </p></div>
+    <div id="omgPrice" class="row"> <p> Product Price </p></div>
   </div>
   </div>
   <div class="card">
   <div class="col">
-    <div id="omgUrl" class="row"> Product Url</div>
-    <div id="omgName" class="row"> Product Name</div>
-    <div id="omgDescript" class="row"> Product Description</div>
-    <div id="omgPrice" class="row"> Product Price</div>
+    <div id="omgUrl" class="row"> <p> Product Url </p></div>
+    <div id="omgName" class="row"> <p> Product Name </p></div>
+    <div id="omgDescript" class="row"> <p> Product Description </p></div>
+    <div id="omgPrice" class="row"> <p> Product Price </p></div>
   </div>
   </div>
   <div class="card">
   <div class="col">
-    <div id="omgUrl" class="row"> Product Url</div>
-    <div id="omgName" class="row"> Product Name</div>
-    <div id="omgDescript" class="row"> Product Description</div>
-    <div id="omgPrice" class="row"> Product Price</div>
+    <div id="omgUrl" class="row"> <p> Product Url </p></div>
+    <div id="omgName" class="row"> <p> Product Name </p></div>
+    <div id="omgDescript" class="row"> <p> Product Description </p></div>
+    <div id="omgPrice" class="row"> <p> Product Price </p></div>
   </div>
   </div>
   
