--- a/views/output.handlebars
+++ b/views/output.handlebars
@@ -17,9 +17,13 @@
   
   <div class="card text">
   <div class="col"> 
+    <h3>Product Name:</h3>
     <div id="omgName" class="row"> <p> {{ ProductName }} </p></div>
+    <h3>Product Price:</h3>
     <div id="omgPrice" class="row"> <p>$ {{ SalePrice }} </p></div>
+    <h3>Product Description:</h3>
     <div id="omgDescript" class="row"> <p> {{ Description }} </p></div>
+    <h3>Product Url:</h3>
     <div id="omgUrl" class="row"> <p> <a target="_blank" href="{{ ProductUrl }}">{{ ProductUrl }}</a> </p></div>
   </div>
   </div>
