--- a/views/price.handlebars
+++ b/views/price.handlebars
@@ -2,38 +2,46 @@
   <div class="container">
     <br>
     <h1 class="display-4 text-center">What price range is your gift?</h1>
-<br>
+    <br>
   </div>
 </div>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col col-md-6 col-md-offset-3">
 
-      <button id="5-10" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$5 - $10</a></button>
-      <button id="10-20" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$10 - $20</a></button>
-      
-    {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
-      <button id="20-30" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$20 - $30</a></button>
-      <button id="0-2000" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">SURPRISE ME</a></button>
+      <button id="5-10" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$5 -
+          $10</a></button>
+      <button id="10-20" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$10 -
+          $20</a></button>
 
-      <br>
+      {{!-- <div class="col col-md-6 col-md-offset-3"> --}}
+        <button id="20-30" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">$20 -
+            $30</a></button>
+        <button id="0-2000" type="submit" class="btn btn-success btn-block price"> <a class="link" href="#">SURPRISE
+            ME</a></button>
+
+        <br>
       </div>
     </div>
   </div>
 
   <div id="redirectBtn" class="row justify-content-center">
     <div class="col-3">
-          
-           <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select a Person</a></button>
-          <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;" href="/category">Select a Category</a></button>
 
-          <button style="margin-top: 50px;" class="btn btn-info btn-block"><a style="color: white;" href="/output">OMG Check Out your Gift</a></button>
+      <button style="margin-top: 50px;" class="btn btn-info btn-block"><a style="color: white;" href="/output">OMG Check
+          Out your Gift</a></button>
+      <button style="margin-top: 10px;" class="btn btn-primary btn-block"><a style="color: white;" href="/login">Select
+          a Person</a></button>
+      <button style="margin-top: 10px;" class="btn btn-danger btn-block"><a style="color: white;"
+          href="/category">Select a Category</a></button>
 
-      <button style="margin-top: 10px;" class="btn btn-warning btn-block clear"><a style="color: white;" href="/">Return to
+
+      <button style="margin-top: 10px;" class="btn btn-warning btn-block clear"><a style="color: white;" href="/">Return
+          to
           Main Menu</a></button>
 
     </div>
   </div>
 
 
- <script type="text/javascript" src="js/category.js"></script>
+  <script type="text/javascript" src="js/category.js"></script>
