--- a/views/output.handlebars
+++ b/views/output.handlebars
@@ -12,7 +12,7 @@
 {{!-- Item output goes here --}}
  <div class="card">
   <div class="card-header text-center">
-    <p id="person" > Your Gift for </p>
+    <p id="person" > Your Gift </p>
   </div>
   
   <div class="card text">
